--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -231,9 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    }
+   ],
    "source": [
     "# 该步骤会比较耗时\n",
     "nyc_arctern_one = arctern.ST_Union_Aggr(nyc_arctern_4326)\n",
@@ -252,9 +260,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ade76ffe19784acea34864f5bf96dd04",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'pickup_points':                        pickup_points\n",
+       "0       POINT (-73.993003 40.747594)\n",
+       "1   …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':arctern.ST_AsText(pickup_in_nyc)})})"
    ]
@@ -268,9 +300,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "224c180cc787405a83e21f30a8aa2b63",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'drop_points':                          drop_points\n",
+       "0       POINT (-73.983609 40.760426)\n",
+       "1     …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 该步骤会比较耗时\n",
     "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
@@ -288,9 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    192802.000000\n",
+       "mean          9.786016\n",
+       "std           7.270403\n",
+       "min           2.500000\n",
+       "25%           5.700000\n",
+       "50%           7.700000\n",
+       "75%          11.250000\n",
+       "max         175.000000\n",
+       "Name: fare_amount, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_resonable = [is_dorpoff_in_nyc[idx] & is_in_nyc[idx] for idx in range(0,len(is_in_nyc)) ]\n",
     "in_nyc_df=nyc_df[pd.Series(is_resonable)]\n",
@@ -306,9 +381,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c589cacfe3bb48c68585fb41b3f809ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'pickup':                            pickup\n",
+       "0    POINT (-73.983795 40.737956)\n",
+       "1    POINT (-73.7…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fare_amount_gt_50 = in_nyc_df[in_nyc_df.fare_amount > 50]\n",
     "pickup_50 = arctern.ST_Point(fare_amount_gt_50.pickup_longitude,fare_amount_gt_50.pickup_latitude)\n",
@@ -327,9 +426,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    192802.000000\n",
+       "mean       3150.775107\n",
+       "std        3325.934986\n",
+       "min           0.000000\n",
+       "25%        1224.997754\n",
+       "50%        2088.253660\n",
+       "75%        3753.011909\n",
+       "max       35395.487197\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nyc_distance=arctern.ST_DistanceSphere(arctern.ST_Point(in_nyc_df.pickup_longitude,\n",
     "                                                        in_nyc_df.pickup_latitude),\n",
@@ -348,9 +466,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "43c7953a8dc14d8e99bec378171f36f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'pickup':                             pickup\n",
+       "0     POINT (-73.781487 40.644855)\n",
+       "1     POINT (-7…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "nyc_with_distance=pd.DataFrame({\"pickup_longitude\":in_nyc_df.pickup_longitude,\n",
     "                                \"pickup_latitude\":in_nyc_df.pickup_latitude,\n",
@@ -367,6 +509,13 @@
     "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(dropoff_gt)})\n",
     "              })"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
