--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4612412d07004e6198f5a102594967a1",
+       "model_id": "03dd51b171c947d69a883be0d7dd54cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,8 +178,8 @@
     "from sridentify import Sridentify\n",
     "ident = Sridentify()\n",
     "ident.from_file('/tmp/taxi_zones.prj')\n",
-    "ident.get_epsg()\n",
-    "nyc_arctern_4326=arctern.ST_Transform(nyc_zone_arctern,'EPSG:2263','EPSG:4326')\n",
+    "src_crs = ident.get_epsg()\n",
+    "nyc_arctern_4326 = arctern.ST_Transform(nyc_zone_arctern,f'EPSG:{src_crs}','EPSG:4326')\n",
     "arctern.ST_AsText(nyc_arctern_4326)"
    ]
   },
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88f5944ad1cf4a2686a344574ad0cbc5",
+       "model_id": "48b4cd1de1c54de09896422647a6da99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,21 +233,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 该步骤会比较耗时\n",
     "nyc_arctern_one = arctern.ST_Union_Aggr(nyc_arctern_4326)\n",
     "nyc_arctern_one = arctern.ST_SimplifyPreserveTopology(nyc_arctern_one,0.005)\n",
     "is_in_nyc = [arctern.ST_Within(point,nyc_arctern_one[0])[0] for point in pickup_points ]\n",
-    "KeplerGl(data={\"nyc_zones\": pd.DataFrame(data={'nyc_zones':arctern.ST_AsText(nyc_arctern_one)})})\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -273,7 +264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ade76ffe19784acea34864f5bf96dd04",
+       "model_id": "5f28ed759d414bbe9cf150bc0a3b43f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "224c180cc787405a83e21f30a8aa2b63",
+       "model_id": "ccc75ac2142a4d2fb210b3fb437bd64d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c589cacfe3bb48c68585fb41b3f809ab",
+       "model_id": "86b54a72af1747dd8b6f2f5507a3f2c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43c7953a8dc14d8e99bec378171f36f7",
+       "model_id": "e2c7158c2e0a497192f0d729384e96e8",
        "version_major": 2,
        "version_minor": 0
       },
