--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03dd51b171c947d69a883be0d7dd54cc",
+       "model_id": "fb2e7995f7034c038002dcc7540a5d76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,18 +108,12 @@
     {
      "data": {
       "text/plain": [
-       "0      POLYGON ((933100.91835271 192536.085697202,933...\n",
-       "1      MULTIPOLYGON (((1033269.24359129 172126.007812...\n",
-       "2      POLYGON ((1026308.76950666 256767.697540373,10...\n",
-       "3      POLYGON ((992073.46679686 203714.07598877,9920...\n",
-       "4      POLYGON ((935843.310493261 144283.335850656,93...\n",
-       "                             ...                        \n",
-       "258    POLYGON ((1025414.78196019 270986.139363825,10...\n",
-       "259    POLYGON ((1011466.96605045 216463.005203798,10...\n",
-       "260    POLYGON ((980555.204311222 196138.486258477,98...\n",
-       "261    MULTIPOLYGON (((999804.794550449 224498.527048...\n",
-       "262    POLYGON ((997493.322715312 220912.386162326,99...\n",
-       "Length: 263, dtype: object"
+       "0    MULTIPOLYGON (((-8226155.13045259 4982269.9492...\n",
+       "1    MULTIPOLYGON (((-8243264.85067129 4948597.8364...\n",
+       "2    MULTIPOLYGON (((-8222843.67198779 4950893.7925...\n",
+       "3    MULTIPOLYGON (((-8219461.92460008 4952778.7319...\n",
+       "4    MULTIPOLYGON (((-8238858.86403699 4965915.0243...\n",
+       "dtype: object"
       ]
      },
      "execution_count": 3,
@@ -131,7 +125,7 @@
     "import shapefile\n",
     "import json\n",
     "# 读取纽约市的地形数据图\n",
-    "nyc_shape = shapefile.Reader(\"/tmp/taxi_zones.shp\")\n",
+    "nyc_shape = shapefile.Reader(\"/tmp/taxi_zones/taxi_zones.shp\")\n",
     "nyc_zone=[ shp.shape.__geo_interface__  for shp in nyc_shape.shapeRecords()]\n",
     "nyc_zone=[json.dumps(shp) for shp in nyc_zone]\n",
     "# 使用 Arctern 读取数据\n",
@@ -155,18 +149,12 @@
     {
      "data": {
       "text/plain": [
-       "0      POLYGON ((-74.184453 40.694996,-74.184489 40.6...\n",
-       "1      MULTIPOLYGON (((-73.8233759726066 40.638987047...\n",
-       "2      POLYGON ((-73.8479261409998 40.871342234,-73.8...\n",
-       "3      POLYGON ((-73.9717741096532 40.7258212813371,-...\n",
-       "4      POLYGON ((-74.1742173809999 40.5625680859999,-...\n",
-       "                             ...                        \n",
-       "258    POLYGON ((-73.851071161919 40.910371520111,-73...\n",
-       "259    POLYGON ((-73.9017537339999 40.760775475,-73.9...\n",
-       "260    POLYGON ((-74.0133261089999 40.7050307879999,-...\n",
-       "261    MULTIPOLYGON (((-73.9438325669999 40.782859089...\n",
-       "262    POLYGON ((-73.95218622 40.7730198449999,-73.95...\n",
-       "Length: 263, dtype: object"
+       "0    MULTIPOLYGON (((-73.8968088322377 40.795808445...\n",
+       "1    MULTIPOLYGON (((-74.0505080640325 40.566422034...\n",
+       "2    MULTIPOLYGON (((-73.8670614947212 40.582087976...\n",
+       "3    MULTIPOLYGON (((-73.8366827410671 40.594946697...\n",
+       "4    MULTIPOLYGON (((-74.0109284126803 40.684491472...\n",
+       "dtype: object"
       ]
      },
      "execution_count": 4,
@@ -177,7 +165,7 @@
    "source": [
     "from sridentify import Sridentify\n",
     "ident = Sridentify()\n",
-    "ident.from_file('/tmp/taxi_zones.prj')\n",
+    "ident.from_file('/tmp/taxi_zones/taxi_zones.prj')\n",
     "src_crs = ident.get_epsg()\n",
     "nyc_arctern_4326 = arctern.ST_Transform(nyc_zone_arctern,f'EPSG:{src_crs}','EPSG:4326')\n",
     "arctern.ST_AsText(nyc_arctern_4326)"
@@ -205,13 +193,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48b4cd1de1c54de09896422647a6da99",
+       "model_id": "208a6e12855d4779a2642ab83a5f03a1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'nyc_zones':                                              nyc_zones\n",
-       "0    POLYGON ((-74.184453 4…"
+       "KeplerGl(data={'nyc_zones':                                            nyc_zones\n",
+       "0  MULTIPOLYGON (((-73.896808…"
       ]
      },
      "metadata": {},
@@ -238,7 +226,7 @@
     "# 该步骤会比较耗时\n",
     "nyc_arctern_one = arctern.ST_Union_Aggr(nyc_arctern_4326)\n",
     "nyc_arctern_one = arctern.ST_SimplifyPreserveTopology(nyc_arctern_one,0.005)\n",
-    "is_in_nyc = [arctern.ST_Within(point,nyc_arctern_one[0])[0] for point in pickup_points ]\n",
+    "is_in_nyc = arctern.ST_Within(pickup_points,nyc_arctern_one[0])\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -264,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f28ed759d414bbe9cf150bc0a3b43f8",
+       "model_id": "444f28ab39544496b060fccb32b7f16f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccc75ac2142a4d2fb210b3fb437bd64d",
+       "model_id": "ff7b0a6ba9124a53906586acaa7645fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,7 +309,7 @@
    "source": [
     "# 该步骤会比较耗时\n",
     "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
-    "is_dorpoff_in_nyc = [arctern.ST_Within(point,nyc_arctern_one[0])[0] for point in dropoff_points ]\n",
+    "is_dorpoff_in_nyc = arctern.ST_Within(dropoff_points,nyc_arctern_one[0])\n",
     "dropoff_in_nyc=dropoff_points[is_dorpoff_in_nyc]\n",
     "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':arctern.ST_AsText(dropoff_in_nyc)})})"
    ]
@@ -341,13 +329,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192802.000000\n",
-       "mean          9.786016\n",
-       "std           7.270403\n",
+       "count    192685.000000\n",
+       "mean          9.732979\n",
+       "std           7.080003\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
-       "75%          11.250000\n",
+       "75%          11.000000\n",
        "max         175.000000\n",
        "Name: fare_amount, dtype: float64"
       ]
@@ -385,7 +373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86b54a72af1747dd8b6f2f5507a3f2c8",
+       "model_id": "978aea3847bb4573ac4e2401db88d80b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "按照里程距离来计算上车点和下车点的直线距离："
+    "我们还可以计算上车点和下车点的直线距离："
    ]
   },
   {
@@ -423,13 +411,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192802.000000\n",
-       "mean       3150.775107\n",
-       "std        3325.934986\n",
+       "count    192685.000000\n",
+       "mean       3134.361428\n",
+       "std        3287.698205\n",
        "min           0.000000\n",
-       "25%        1224.997754\n",
-       "50%        2088.253660\n",
-       "75%        3753.011909\n",
+       "25%        1224.346879\n",
+       "50%        2086.818886\n",
+       "75%        3744.105475\n",
        "max       35395.487197\n",
        "dtype: float64"
       ]
@@ -470,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2c7158c2e0a497192f0d729384e96e8",
+       "model_id": "da48d3c461bb4578a25b8aecf5025421",
        "version_major": 2,
        "version_minor": 0
       },
