--- a/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "本文将介绍如何利用 Arctern 处理纽约出租车数据，同时结合 Keplergl 展示数据。\n",
+    "We will introduce how to analyze NYC Taxi dataset with Arctern, and use keplergl to display the data. \n",
     "\n",
-    "首先需要加载数据："
+    "First we need to load data:"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "展示所有上车点的位置："
+    "display the pick-up point:"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03dd51b171c947d69a883be0d7dd54cc",
+       "model_id": "e9d712cb5e5b4eb7802f5fd193765f62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,16 +88,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "返回的结果在地图上支持交互操作，可以发现输入的出租车数据存有噪点，有些上车点已经到海面上了，实际上所有数据应该都集中在陆地上才是合理的，这些噪点数据就需要我们通过一定的方法进行过滤。\n",
+    "The map results support select and drag, we can see it has noisy data, because the pick-up point are painted on the sea. In fact, all the data should be concentrated on land. These noisy data need to clean and filter.\n",
     "\n",
-    "为了正确分析纽约市区中的出租车数据，接下来我们会根据纽约市的地形图来过滤数据，即不在纽约市地图中的数据视为噪点数据并进行过滤。"
+    "In order to correctly analyze the NYC taxi data, we will filter the data according to the topographic map of New York City. The data that is not in the New York City map is regarded as noisy and needed filtered."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "首先我们读取纽约市的地形数据图，该地形数据是以 GeoJSON 格式存储的，首先使用 Arctern 解析 GeoJSON 数据："
+    "Read the topographic data map of New York City. The topographic data is stored in GeoJSON format. First, use Arctern to load the GeoJSON data:"
    ]
   },
   {
@@ -108,18 +108,12 @@
     {
      "data": {
       "text/plain": [
-       "0      POLYGON ((933100.91835271 192536.085697202,933...\n",
-       "1      MULTIPOLYGON (((1033269.24359129 172126.007812...\n",
-       "2      POLYGON ((1026308.76950666 256767.697540373,10...\n",
-       "3      POLYGON ((992073.46679686 203714.07598877,9920...\n",
-       "4      POLYGON ((935843.310493261 144283.335850656,93...\n",
-       "                             ...                        \n",
-       "258    POLYGON ((1025414.78196019 270986.139363825,10...\n",
-       "259    POLYGON ((1011466.96605045 216463.005203798,10...\n",
-       "260    POLYGON ((980555.204311222 196138.486258477,98...\n",
-       "261    MULTIPOLYGON (((999804.794550449 224498.527048...\n",
-       "262    POLYGON ((997493.322715312 220912.386162326,99...\n",
-       "Length: 263, dtype: object"
+       "0    MULTIPOLYGON (((-8226155.13045259 4982269.9492...\n",
+       "1    MULTIPOLYGON (((-8243264.85067129 4948597.8364...\n",
+       "2    MULTIPOLYGON (((-8222843.67198779 4950893.7925...\n",
+       "3    MULTIPOLYGON (((-8219461.92460008 4952778.7319...\n",
+       "4    MULTIPOLYGON (((-8238858.86403699 4965915.0243...\n",
+       "dtype: object"
       ]
      },
      "execution_count": 3,
@@ -130,11 +124,11 @@
    "source": [
     "import shapefile\n",
     "import json\n",
-    "# 读取纽约市的地形数据图\n",
-    "nyc_shape = shapefile.Reader(\"/tmp/taxi_zones.shp\")\n",
+    "# read the topographic data map of New York City\n",
+    "nyc_shape = shapefile.Reader(\"/tmp/taxi_zones/taxi_zones.shp\")\n",
     "nyc_zone=[ shp.shape.__geo_interface__  for shp in nyc_shape.shapeRecords()]\n",
     "nyc_zone=[json.dumps(shp) for shp in nyc_zone]\n",
-    "# 使用 Arctern 读取数据\n",
+    "# read the data with Arctern\n",
     "nyc_zone_series=pd.Series(nyc_zone)\n",
     "nyc_zone_arctern=arctern.ST_GeomFromGeoJSON(nyc_zone_series)\n",
     "arctern.ST_AsText(nyc_zone_arctern)"
@@ -144,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "获得当前纽约市地形数据文件的坐标系，并利用 Arctern 将该坐标系转成经纬度坐标系，即 “EPSG:4326” ："
+    "Get the coordinate system of the current New York City topographic map, and use Arctern to convert the coordinate system to a latitude and longitude coordinate system, which is \"EPSG: 4326\":"
    ]
   },
   {
@@ -155,18 +149,12 @@
     {
      "data": {
       "text/plain": [
-       "0      POLYGON ((-74.184453 40.694996,-74.184489 40.6...\n",
-       "1      MULTIPOLYGON (((-73.8233759726066 40.638987047...\n",
-       "2      POLYGON ((-73.8479261409998 40.871342234,-73.8...\n",
-       "3      POLYGON ((-73.9717741096532 40.7258212813371,-...\n",
-       "4      POLYGON ((-74.1742173809999 40.5625680859999,-...\n",
-       "                             ...                        \n",
-       "258    POLYGON ((-73.851071161919 40.910371520111,-73...\n",
-       "259    POLYGON ((-73.9017537339999 40.760775475,-73.9...\n",
-       "260    POLYGON ((-74.0133261089999 40.7050307879999,-...\n",
-       "261    MULTIPOLYGON (((-73.9438325669999 40.782859089...\n",
-       "262    POLYGON ((-73.95218622 40.7730198449999,-73.95...\n",
-       "Length: 263, dtype: object"
+       "0    MULTIPOLYGON (((-73.8968088322377 40.795808445...\n",
+       "1    MULTIPOLYGON (((-74.0505080640325 40.566422034...\n",
+       "2    MULTIPOLYGON (((-73.8670614947212 40.582087976...\n",
+       "3    MULTIPOLYGON (((-73.8366827410671 40.594946697...\n",
+       "4    MULTIPOLYGON (((-74.0109284126803 40.684491472...\n",
+       "dtype: object"
       ]
      },
      "execution_count": 4,
@@ -177,7 +165,7 @@
    "source": [
     "from sridentify import Sridentify\n",
     "ident = Sridentify()\n",
-    "ident.from_file('/tmp/taxi_zones.prj')\n",
+    "ident.from_file('/tmp/taxi_zones/taxi_zones.prj')\n",
     "src_crs = ident.get_epsg()\n",
     "nyc_arctern_4326 = arctern.ST_Transform(nyc_zone_arctern,f'EPSG:{src_crs}','EPSG:4326')\n",
     "arctern.ST_AsText(nyc_arctern_4326)"
@@ -187,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "根据转换后的经纬度坐标，绘制的纽约市地形图："
+    "According to the converted latitude and longitude coordinates, the topographic map of New York City is drawn as follows:"
    ]
   },
   {
@@ -205,13 +193,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48b4cd1de1c54de09896422647a6da99",
+       "model_id": "ad8c9883eda143449c3b167b0f10b74b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'nyc_zones':                                              nyc_zones\n",
-       "0    POLYGON ((-74.184453 4…"
+       "KeplerGl(data={'nyc_zones':                                            nyc_zones\n",
+       "0  MULTIPOLYGON (((-73.896808…"
       ]
      },
      "metadata": {},
@@ -226,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "为了分析纽约市区中的出租车数据，根据纽约市的地形图，我们认为不在图内的点即为噪点，以此过滤出租车数据中的噪点，首先我们根据纽约市区的轮廓图对上车点进行过滤："
+    "In order to analyze the taxi data in the New York City area, according to the topographic map of New York City, we see that the points that are not in the map are noise. In order to filter the noisy data, first we filter the pick-up points based on the skeleton map of New York City:"
    ]
   },
   {
@@ -235,10 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 该步骤会比较耗时\n",
+    "# this step will cost some time\n",
     "nyc_arctern_one = arctern.ST_Union_Aggr(nyc_arctern_4326)\n",
     "nyc_arctern_one = arctern.ST_SimplifyPreserveTopology(nyc_arctern_one,0.005)\n",
-    "is_in_nyc = [arctern.ST_Within(point,nyc_arctern_one[0])[0] for point in pickup_points ]\n",
+    "is_in_nyc = arctern.ST_Within(pickup_points,nyc_arctern_one[0])\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -246,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "绘制出数据过滤后的上车点："
+    "Display the pick-up point after data filtering:"
    ]
   },
   {
@@ -264,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f28ed759d414bbe9cf150bc0a3b43f8",
+       "model_id": "2df4297c02b64e69a4cd1894ef2b2957",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "根据同样的方法，对乘客的下车点进行过滤："
+    "According to the same method, filter the drop-off point:"
    ]
   },
   {
@@ -304,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccc75ac2142a4d2fb210b3fb437bd64d",
+       "model_id": "8a2fe886a6e141398fe588ceafbbd43a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,9 +307,9 @@
     }
    ],
    "source": [
-    "# 该步骤会比较耗时\n",
+    "# this step will cost some time\n",
     "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
-    "is_dorpoff_in_nyc = [arctern.ST_Within(point,nyc_arctern_one[0])[0] for point in dropoff_points ]\n",
+    "is_dorpoff_in_nyc = arctern.ST_Within(dropoff_points,nyc_arctern_one[0])\n",
     "dropoff_in_nyc=dropoff_points[is_dorpoff_in_nyc]\n",
     "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':arctern.ST_AsText(dropoff_in_nyc)})})"
    ]
@@ -330,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "根据上车点和下车点经纬度数据，在最初的数据上过滤所有的非法数据："
+    "According to the latitude and longitude data of the pick-up point and the drop-off point, filter all noisy data on the dataset:"
    ]
   },
   {
@@ -341,13 +329,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192802.000000\n",
-       "mean          9.786016\n",
-       "std           7.270403\n",
+       "count    192690.000000\n",
+       "mean          9.733003\n",
+       "std           7.079953\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
-       "75%          11.250000\n",
+       "75%          11.000000\n",
        "max         175.000000\n",
        "Name: fare_amount, dtype: float64"
       ]
@@ -367,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们按照交易额提取费用大于 50 美元的数据，并绘制出租车的上车点和下车点："
+    "We extract data with fees greater than $50 according to the transaction amount, and plot taxi pick-up and drop-off points:"
    ]
   },
   {
@@ -385,7 +373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86b54a72af1747dd8b6f2f5507a3f2c8",
+       "model_id": "7b586bd1ce294d3cbc9182a8d6b857d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "按照里程距离来计算上车点和下车点的直线距离："
+    "We can also calculate the straight-line distance between the pick-up point and the drop-off point:"
    ]
   },
   {
@@ -423,13 +411,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192802.000000\n",
-       "mean       3150.775107\n",
-       "std        3325.934986\n",
+       "count    192690.000000\n",
+       "mean       3134.342665\n",
+       "std        3287.665504\n",
        "min           0.000000\n",
-       "25%        1224.997754\n",
-       "50%        2088.253660\n",
-       "75%        3753.011909\n",
+       "25%        1224.352451\n",
+       "50%        2086.809469\n",
+       "75%        3744.095273\n",
        "max       35395.487197\n",
        "dtype: float64"
       ]
@@ -452,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "获得直线距离大于 20 公里的点，并绘制所有直线距离大于 20 公里的上车点和下车点："
+    "Get the points with a straight-line distance greater than 20 kilometers, and draw all pick-up and drop-off points with a straight-line distance greater than 20 kilometers:"
    ]
   },
   {
@@ -470,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2c7158c2e0a497192f0d729384e96e8",
+       "model_id": "0f99994f6f684485a722a57ea6078123",
        "version_major": 2,
        "version_minor": 0
       },
