--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb2e7995f7034c038002dcc7540a5d76",
+       "model_id": "f0f1faedbff4409581b077c4b2cba05e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,12 +108,18 @@
     {
      "data": {
       "text/plain": [
-       "0    MULTIPOLYGON (((-8226155.13045259 4982269.9492...\n",
-       "1    MULTIPOLYGON (((-8243264.85067129 4948597.8364...\n",
-       "2    MULTIPOLYGON (((-8222843.67198779 4950893.7925...\n",
-       "3    MULTIPOLYGON (((-8219461.92460008 4952778.7319...\n",
-       "4    MULTIPOLYGON (((-8238858.86403699 4965915.0243...\n",
-       "dtype: object"
+       "0      POLYGON ((933100.91835271 192536.085697202,933...\n",
+       "1      MULTIPOLYGON (((1033269.24359129 172126.007812...\n",
+       "2      POLYGON ((1026308.76950666 256767.697540373,10...\n",
+       "3      POLYGON ((992073.46679686 203714.07598877,9920...\n",
+       "4      POLYGON ((935843.310493261 144283.335850656,93...\n",
+       "                             ...                        \n",
+       "258    POLYGON ((1025414.78196019 270986.139363825,10...\n",
+       "259    POLYGON ((1011466.96605045 216463.005203798,10...\n",
+       "260    POLYGON ((980555.204311222 196138.486258477,98...\n",
+       "261    MULTIPOLYGON (((999804.794550449 224498.527048...\n",
+       "262    POLYGON ((997493.322715312 220912.386162326,99...\n",
+       "Length: 263, dtype: object"
       ]
      },
      "execution_count": 3,
@@ -149,12 +155,18 @@
     {
      "data": {
       "text/plain": [
-       "0    MULTIPOLYGON (((-73.8968088322377 40.795808445...\n",
-       "1    MULTIPOLYGON (((-74.0505080640325 40.566422034...\n",
-       "2    MULTIPOLYGON (((-73.8670614947212 40.582087976...\n",
-       "3    MULTIPOLYGON (((-73.8366827410671 40.594946697...\n",
-       "4    MULTIPOLYGON (((-74.0109284126803 40.684491472...\n",
-       "dtype: object"
+       "0      POLYGON ((-74.184453 40.694996,-74.184489 40.6...\n",
+       "1      MULTIPOLYGON (((-73.8233759726066 40.638987047...\n",
+       "2      POLYGON ((-73.8479261409998 40.871342234,-73.8...\n",
+       "3      POLYGON ((-73.9717741096532 40.7258212813371,-...\n",
+       "4      POLYGON ((-74.1742173809999 40.5625680859999,-...\n",
+       "                             ...                        \n",
+       "258    POLYGON ((-73.851071161919 40.910371520111,-73...\n",
+       "259    POLYGON ((-73.9017537339999 40.760775475,-73.9...\n",
+       "260    POLYGON ((-74.0133261089999 40.7050307879999,-...\n",
+       "261    MULTIPOLYGON (((-73.9438325669999 40.782859089...\n",
+       "262    POLYGON ((-73.95218622 40.7730198449999,-73.95...\n",
+       "Length: 263, dtype: object"
       ]
      },
      "execution_count": 4,
@@ -193,13 +205,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "208a6e12855d4779a2642ab83a5f03a1",
+       "model_id": "9ec41ec5c9454ca482b3dea6a81d4bd1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'nyc_zones':                                            nyc_zones\n",
-       "0  MULTIPOLYGON (((-73.896808…"
+       "KeplerGl(data={'nyc_zones':                                              nyc_zones\n",
+       "0    POLYGON ((-74.184453 4…"
       ]
      },
      "metadata": {},
@@ -224,9 +236,8 @@
    "outputs": [],
    "source": [
     "# 该步骤会比较耗时\n",
-    "nyc_arctern_one = arctern.ST_Union_Aggr(nyc_arctern_4326)\n",
-    "nyc_arctern_one = arctern.ST_SimplifyPreserveTopology(nyc_arctern_one,0.005)\n",
-    "is_in_nyc = arctern.ST_Within(pickup_points,nyc_arctern_one[0])\n",
+    "index_nyc = arctern.sjoin(pickup_points, nyc_arctern_4326, 'within')\n",
+    "is_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -252,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444f28ab39544496b060fccb32b7f16f",
+       "model_id": "c61bbbb925624be6bff68aa8268f9076",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7b0a6ba9124a53906586acaa7645fa",
+       "model_id": "1acb1b0d6ecf481db49122f25418fe3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +320,8 @@
    "source": [
     "# 该步骤会比较耗时\n",
     "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
-    "is_dorpoff_in_nyc = arctern.ST_Within(dropoff_points,nyc_arctern_one[0])\n",
+    "index_nyc = arctern.sjoin(dropoff_points, nyc_arctern_4326, 'within')\n",
+    "is_dorpoff_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
     "dropoff_in_nyc=dropoff_points[is_dorpoff_in_nyc]\n",
     "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':arctern.ST_AsText(dropoff_in_nyc)})})"
    ]
@@ -329,13 +341,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192685.000000\n",
-       "mean          9.732979\n",
-       "std           7.080003\n",
+       "count    195479.000000\n",
+       "mean          9.791914\n",
+       "std           7.266372\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
-       "75%          11.000000\n",
+       "75%          11.300000\n",
        "max         175.000000\n",
        "Name: fare_amount, dtype: float64"
       ]
@@ -373,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "978aea3847bb4573ac4e2401db88d80b",
+       "model_id": "6712264cfd5c45ddbd171a4a46fca773",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,13 +423,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192685.000000\n",
-       "mean       3134.361428\n",
-       "std        3287.698205\n",
+       "count    195479.000000\n",
+       "mean       3150.718965\n",
+       "std        3321.422772\n",
        "min           0.000000\n",
-       "25%        1224.346879\n",
-       "50%        2086.818886\n",
-       "75%        3744.105475\n",
+       "25%        1226.479199\n",
+       "50%        2091.979381\n",
+       "75%        3751.810025\n",
        "max       35395.487197\n",
        "dtype: float64"
       ]
@@ -458,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da48d3c461bb4578a25b8aecf5025421",
+       "model_id": "c7fecce87918409d8ec9815e8526f28f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,6 +500,13 @@
     "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(dropoff_gt)})\n",
     "              })"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
