--- a/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will introduce how to analyze NYC Taxi dataset with Arctern, and use keplergl to display the data. \n",
+    "This tutorial will guide you through analyzing New York City Taxi dataset with Arctern for massive  Geospatial data processing and with keplergl for data visualization. \n",
     "\n",
     "First we need to load data:"
    ]
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "nyc_schame={\n",
+    "nyc_schema={\n",
     "    \"VendorID\":\"string\",\n",
     "    \"tpep_pickup_datetime\":\"string\",\n",
     "    \"tpep_dropoff_datetime\":\"string\",\n",
@@ -35,7 +35,7 @@
     "    \"buildingtext_dropoff\":\"string\",\n",
     "}\n",
     "nyc_df=pd.read_csv(\"/tmp/0_2M_nyc_taxi_and_building.csv\",\n",
-    "               dtype=nyc_schame,\n",
+    "               dtype=nyc_schema,\n",
     "               date_parser=pd.to_datetime,\n",
     "               parse_dates=[\"tpep_pickup_datetime\",\"tpep_dropoff_datetime\"])"
    ]
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "display the pick-up point:"
+    "display the pick-up locations:"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9d712cb5e5b4eb7802f5fd193765f62",
+       "model_id": "a2c62c1dbe7b45338df31e9e1caf61be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,16 +88,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The map results support select and drag, we can see it has noisy data, because the pick-up point are painted on the sea. In fact, all the data should be concentrated on land. These noisy data need to clean and filter.\n",
+    "With the visualized results on the map, we can identify the noisy data easily, as some of the pick-up locations are in the ocean. These noisy data need to be filtered.\n",
     "\n",
-    "In order to correctly analyze the NYC taxi data, we will filter the data according to the topographic map of New York City. The data that is not in the New York City map is regarded as noisy and needed filtered."
+    "In order to get rid of the noisy data, we can filter the data according to the topographic map of New York City. The idea is that, if the pick-up or drop-off location is not within the New York City boundary, this record should be filtered."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the topographic data map of New York City. The topographic data is stored in GeoJSON format. First, use Arctern to load the GeoJSON data:"
+    "Load the New York City topographic map from the GeoJSON file with Arctern:"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the coordinate system of the current New York City topographic map, and use Arctern to convert the coordinate system to a latitude and longitude coordinate system, which is \"EPSG: 4326\":"
+    "Get the current coordinate system of the New York City topographic map, and use Arctern to convert the coordinate system to \"EPSG: 4326\":"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the converted latitude and longitude coordinates, the topographic map of New York City is drawn as follows:"
+    "With the converted latitude and longitude coordinates, the topographic map of New York City is rendered as follows:"
    ]
   },
   {
@@ -193,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad8c9883eda143449c3b167b0f10b74b",
+       "model_id": "1dae2f0efd89437d93b604c61cb067c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to analyze the taxi data in the New York City area, according to the topographic map of New York City, we see that the points that are not in the map are noise. In order to filter the noisy data, first we filter the pick-up points based on the skeleton map of New York City:"
+    "In order to clean up the noisy data, we can filter out records with pick-up locations outside the skeleton map of New York City."
    ]
   },
   {
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display the pick-up point after data filtering:"
+    "Display the pick-up locations after filtering."
    ]
   },
   {
@@ -252,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2df4297c02b64e69a4cd1894ef2b2957",
+       "model_id": "5a26d2c8f2d84c7285846010995906ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the same method, filter the drop-off point:"
+    "Filter these data by the drop-off locations."
    ]
   },
   {
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a2fe886a6e141398fe588ceafbbd43a",
+       "model_id": "44723722049e49669936d025e5f3e1b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the latitude and longitude data of the pick-up point and the drop-off point, filter all noisy data on the dataset:"
+    "To clean all noisy data, we can filter data with both pick-up locations and the drop-off locations:"
    ]
   },
   {
@@ -329,9 +329,9 @@
     {
      "data": {
       "text/plain": [
-       "count    192690.000000\n",
-       "mean          9.733003\n",
-       "std           7.079953\n",
+       "count    192685.000000\n",
+       "mean          9.732979\n",
+       "std           7.080003\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We extract data with fees greater than $50 according to the transaction amount, and plot taxi pick-up and drop-off points:"
+    "Plot pick-up and drop-off locations with transaction amount greater than $50:"
    ]
   },
   {
@@ -373,7 +373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b586bd1ce294d3cbc9182a8d6b857d5",
+       "model_id": "e885f5e9042e4367beec4b67c4dd3662",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also calculate the straight-line distance between the pick-up point and the drop-off point:"
+    "Calculate the straight-line distance between the pick-up and the drop-off locations:"
    ]
   },
   {
@@ -411,13 +411,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192690.000000\n",
-       "mean       3134.342665\n",
-       "std        3287.665504\n",
+       "count    192685.000000\n",
+       "mean       3134.361428\n",
+       "std        3287.698205\n",
        "min           0.000000\n",
-       "25%        1224.352451\n",
-       "50%        2086.809469\n",
-       "75%        3744.095273\n",
+       "25%        1224.346879\n",
+       "50%        2086.818886\n",
+       "75%        3744.105475\n",
        "max       35395.487197\n",
        "dtype: float64"
       ]
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the points with a straight-line distance greater than 20 kilometers, and draw all pick-up and drop-off points with a straight-line distance greater than 20 kilometers:"
+    "Get the pick-up and the drop-off locations for trips with a straight-line distance greater than 20 kilometers, and plot them."
    ]
   },
   {
@@ -458,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f99994f6f684485a722a57ea6078123",
+       "model_id": "969f442c59234e44817daf2df3c2c4b3",
        "version_major": 2,
        "version_minor": 0
       },
