--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "本文将介绍如何利用 Arctern 处理纽约出租车数据，同时结合 Keplergl 展示数据。\n",
+    "本文将介绍如何利用 Arctern 处理大型地理空间数据，并使用 keplergl 进行数据可视化分析纽约市出租车数据集。\n",
     "\n",
     "首先需要加载数据："
    ]
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "nyc_schame={\n",
+    "nyc_schema={\n",
     "    \"VendorID\":\"string\",\n",
     "    \"tpep_pickup_datetime\":\"string\",\n",
     "    \"tpep_dropoff_datetime\":\"string\",\n",
@@ -35,7 +35,7 @@
     "    \"buildingtext_dropoff\":\"string\",\n",
     "}\n",
     "nyc_df=pd.read_csv(\"/tmp/0_2M_nyc_taxi_and_building.csv\",\n",
-    "               dtype=nyc_schame,\n",
+    "               dtype=nyc_schema,\n",
     "               date_parser=pd.to_datetime,\n",
     "               parse_dates=[\"tpep_pickup_datetime\",\"tpep_dropoff_datetime\"])"
    ]
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb2e7995f7034c038002dcc7540a5d76",
+       "model_id": "9d70be817d52418d8707a87ffe27b97d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -193,7 +195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "208a6e12855d4779a2642ab83a5f03a1",
+       "model_id": "a30b9e82f34d45fab489a623315db069",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "为了分析纽约市区中的出租车数据，根据纽约市的地形图，我们认为不在图内的点即为噪点，以此过滤出租车数据中的噪点，首先我们根据纽约市区的轮廓图对上车点进行过滤："
+    "我们认为不在纽约市论库图内的点即为噪点，以此过滤出租车数据，首先我们根据纽约市区的轮廓图对上车点进行过滤："
    ]
   },
   {
@@ -252,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444f28ab39544496b060fccb32b7f16f",
+       "model_id": "16001fdd460a447ea06565876da36743",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7b0a6ba9124a53906586acaa7645fa",
+       "model_id": "3ae3fd80bfc0468eac7393b85eb13f1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,9 +331,9 @@
     {
      "data": {
       "text/plain": [
-       "count    192685.000000\n",
-       "mean          9.732979\n",
-       "std           7.080003\n",
+       "count    192690.000000\n",
+       "mean          9.733003\n",
+       "std           7.079953\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
@@ -373,7 +375,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "978aea3847bb4573ac4e2401db88d80b",
+       "model_id": "8d21ffc37cf44d3eb5a64492e15d912d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,13 +413,13 @@
     {
      "data": {
       "text/plain": [
-       "count    192685.000000\n",
-       "mean       3134.361428\n",
-       "std        3287.698205\n",
+       "count    192690.000000\n",
+       "mean       3134.342665\n",
+       "std        3287.665504\n",
        "min           0.000000\n",
-       "25%        1224.346879\n",
-       "50%        2086.818886\n",
-       "75%        3744.105475\n",
+       "25%        1224.352451\n",
+       "50%        2086.809469\n",
+       "75%        3744.095273\n",
        "max       35395.487197\n",
        "dtype: float64"
       ]
@@ -458,7 +460,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da48d3c461bb4578a25b8aecf5025421",
+       "model_id": "bece22f256d748f2bcc4b6cfb7229e16",
        "version_major": 2,
        "version_minor": 0
       },
