--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0f1faedbff4409581b077c4b2cba05e",
+       "model_id": "be30df552efb401682847623325d366b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ec41ec5c9454ca482b3dea6a81d4bd1",
+       "model_id": "f11226990dc74891890daea6d113ce81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c61bbbb925624be6bff68aa8268f9076",
+       "model_id": "d01d84f285de4f73accd3bf56923acdf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1acb1b0d6ecf481db49122f25418fe3f",
+       "model_id": "571276809c974e87bf703f0e7a26377a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,6 +369,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "根据纽约市轮廓图对租车数据过滤后，我们发现很多上车点的位置和道路有一些偏差，甚至偏离到某些建筑物内："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3405004c4d2c4831bf42aa703ce32089",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open(\"map_config.json\", \"r\") as f:\n",
+    "    config = json.load(f)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(pickup_in_nyc)})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们认为离道路较远的数据同样为噪点(默认离道路距离大于100m视为较远),通过匹配纽约市的道路网将偏离道路较远的租车数据过滤掉，首先加载纽约市道路网："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arctern\n",
+    "nyc_road=pd.read_csv(\"/tmp/nyc_road.csv\", dtype={\"roads\":\"string\"}, delimiter='|')\n",
+    "roads=arctern.ST_GeomFromText(nyc_road.roads)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "然后根据纽约市的道路网对上车点和下车点进行过滤："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickup_points = arctern.ST_Point(in_nyc_df.pickup_longitude,in_nyc_df.pickup_latitude)\n",
+    "dropoff_points = arctern.ST_Point(in_nyc_df.dropoff_longitude,in_nyc_df.dropoff_latitude)\n",
+    "is_pickup_near_road = arctern.near_road(roads, pickup_points)\n",
+    "is_dropoff_near_road = arctern.near_road(roads, dropoff_points)\n",
+    "is_resonable = [is_pickup_near_road[idx] & is_dropoff_near_road[idx] for idx in range(0,len(is_dropoff_near_road)) ]\n",
+    "in_nyc_df=in_nyc_df.reset_index()\n",
+    "on_road_nyc_df=in_nyc_df[pd.Series(is_resonable)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "过滤到距离道路较远的租车数据之后，我们将上车点绑定到最近的道路上，生成新的上车点："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickup_points = arctern.ST_Point(on_road_nyc_df.pickup_longitude,on_road_nyc_df.pickup_latitude)\n",
+    "projectioned_pickup = arctern.nearest_location_on_road(roads, pickup_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "绘制出数据绑定道路后的上车点："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_pickup)})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "根据同样的方法，将乘客下车点绑定到最近的道路上，生成新的下车点："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropoff_points = arctern.ST_Point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "projectioned_dropoff = arctern.nearest_location_on_road(roads, dropoff_points)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_dropoff)})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将绑路后的乘客上下车位置信息添加到dataframe near_road_df 中："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_road_nyc_df.insert(16,'pickup_on_road',projectioned_pickup)\n",
+    "on_road_nyc_df.insert(17,'dropoff_on_road',projectioned_dropoff)\n",
+    "on_road_nyc_df.fare_amount.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "我们按照交易额提取费用大于 50 美元的数据，并绘制出租车的上车点和下车点："
    ]
   },
@@ -402,11 +552,9 @@
     }
    ],
    "source": [
-    "fare_amount_gt_50 = in_nyc_df[in_nyc_df.fare_amount > 50]\n",
-    "pickup_50 = arctern.ST_Point(fare_amount_gt_50.pickup_longitude,fare_amount_gt_50.pickup_latitude)\n",
-    "dropoff_50 = arctern.ST_Point(fare_amount_gt_50.dropoff_longitude,fare_amount_gt_50.dropoff_latitude)\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(pickup_50)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(dropoff_50)})\n",
+    "fare_amount_gt_50 = on_road_nyc_df[on_road_nyc_df.fare_amount > 50]\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(fare_amount_gt_50.pickup_on_road)}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(fare_amount_gt_50.dropoff_on_road)})\n",
     "              })"
    ]
   },
@@ -442,11 +590,8 @@
     }
    ],
    "source": [
-    "nyc_distance=arctern.ST_DistanceSphere(arctern.ST_Point(in_nyc_df.pickup_longitude,\n",
-    "                                                        in_nyc_df.pickup_latitude),\n",
-    "                                       arctern.ST_Point(in_nyc_df.dropoff_longitude,\n",
-    "                                                        in_nyc_df.dropoff_latitude))\n",
-    "nyc_distance.index=in_nyc_df.index\n",
+    "nyc_distance=arctern.ST_DistanceSphere(on_road_nyc_df.pickup_on_road, on_road_nyc_df.dropoff_on_road)\n",
+    "nyc_distance.index=on_road_nyc_df.index\n",
     "nyc_distance.describe()"
    ]
   },
@@ -487,19 +632,14 @@
     }
    ],
    "source": [
-    "nyc_with_distance=pd.DataFrame({\"pickup_longitude\":in_nyc_df.pickup_longitude,\n",
-    "                                \"pickup_latitude\":in_nyc_df.pickup_latitude,\n",
-    "                                \"dropoff_longitude\":in_nyc_df.dropoff_longitude,\n",
-    "                                \"dropoff_latitude\":in_nyc_df.dropoff_latitude,\n",
+    "nyc_with_distance=pd.DataFrame({\"pickup\":on_road_nyc_df.pickup_on_road,\n",
+    "                                \"dropoff\":on_road_nyc_df.dropoff_on_road,\n",
     "                                \"sphere_distance\":nyc_distance\n",
     "                               })\n",
     "\n",
     "nyc_dist_gt = nyc_with_distance[nyc_with_distance.sphere_distance > 20e3]\n",
-    "pickup_gt = arctern.ST_Point(nyc_dist_gt.pickup_longitude,nyc_dist_gt.pickup_latitude)\n",
-    "dropoff_gt = arctern.ST_Point(nyc_dist_gt.dropoff_longitude,nyc_dist_gt.dropoff_latitude)\n",
-    "\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(pickup_gt)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(dropoff_gt)})\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(nyc_dist_gt.pickup)}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(nyc_dist_gt.dropoff)})\n",
     "              })"
    ]
   },
@@ -527,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
